fix: frontend (defaultVisible rudimentary fix for flickering nav)

--- a/apps/frontend/styles/splash.scss
+++ b/apps/frontend/styles/splash.scss
@@ -3,7 +3,6 @@
     @apply h-screen;
 
     background-image:    url("/img/humber.jpg");
-    height:              100%;
     background-position: center;
     background-repeat:   no-repeat;
     background-size:     cover;
